# fleetshell

./: AGENTS.md  Cargo.toml  TODO-port-rows.md  TODO.md  package-lock.json  pi-session-2026-07-21T07-52-57-871Z_019f83a9-e70f-7ad3-ba88-7c59fead0200.html
.cargo/: config.toml
fleetshell-client/: package-lock.json  package.json  vite.config.ts
fleetshell-client/src/: app.css
fleetshell-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
fleetshell-client/src-tauri/capabilities/: default.json
fleetshell-client/src-tauri/nsis/: installer.nsi
fleetshell-client/src-tauri/src/: app.manifest  config.rs  lib.rs  portal.rs  server.rs  slot.rs  tunnel.rs  util.rs  zscaler.rs
fleetshell-client/src/lib/components/: EnrollmentView.svelte  FunctionsView.svelte  LogView.svelte  SettingsView.svelte
fleetshell-client/src/routes/: +layout.svelte  +layout.ts  +page.svelte
fleetshell-gateway/: Cargo.toml  Dockerfile
fleetshell-gateway/scripts/: run.sh  shell.sh
fleetshell-gateway/src/: auth.rs  config.rs  handler.rs  health.rs  main.rs  tls.rs  transform.rs
fleetshell-portal/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json
fleetshell-portal/certs/: client.pem
fleetshell-portal/scripts/: shell.sh  start_portal.sh
fleetshell-portal/src/: app.css  app.d.ts  app.html  hooks.server.ts
fleetshell-portal/src/lib/components/: AppShell.svelte
fleetshell-portal/src/lib/server/: constants.ts  jwt.ts  redis.ts  session.ts
fleetshell-portal/src/routes/: +page.server.ts
fleetshell-portal/src/routes/(app)/: +layout.server.ts  +layout.svelte
fleetshell-portal/src/routes/(app)/administration/: +page.svelte
fleetshell-portal/src/routes/(app)/devices/: +page.server.ts  +page.svelte
fleetshell-portal/src/routes/(app)/settings/: +page.svelte
fleetshell-portal/src/routes/(app)/support/: +page.svelte
fleetshell-portal/src/routes/api/cert/confirm/: +server.ts
fleetshell-portal/src/routes/api/cert/get/: +server.ts
fleetshell-portal/src/routes/api/cert/key/: +server.ts
fleetshell-portal/src/routes/api/cert/request/: +server.ts
fleetshell-portal/src/routes/api/cert/status/: +server.ts
fleetshell-portal/src/routes/api/client/probe/[id]/: +server.ts
fleetshell-portal/src/routes/api/clients/: +server.ts
fleetshell-portal/src/routes/api/enrollment/[id]/stream/: +server.ts
fleetshell-portal/src/routes/api/probes/[id]/stream/: +server.ts
fleetshell-portal/src/routes/api/tunnel/sign/: +server.ts
fleetshell-portal/src/routes/login/: +page.server.ts  +page.svelte
fleetshell-portal/src/routes/logout/: +server.ts
fleetshell-portal/src/routes/support/apps/[filename]/: +server.ts
fleetshell-portal/src/routes/welcome/: +page.server.ts  +page.svelte
scripts/: build-windows-x64.sh  build_gateway.sh  build_portal.sh  build_testserver.sh  start-fake.sh
test-server/: .gitignore  Cargo.toml  Dockerfile
test-server/scripts/: authorized_keys  run.sh  shell.sh
test-server/src/: main.rs
