# Opt out of the parent workspace — this is a standalone test container.
[workspace]

[package]
name        = "test-server"
version     = "0.1.0"
edition     = "2021"
description = "FleetShell test device — random-named TLS server"

[[bin]]
name = "test-server"
path = "src/main.rs"

[dependencies]
# ── Async runtime ────────────────────────────────────────────────────────────
tokio        = { version = "1", features = ["full"] }

# ── HTTP framework ────────────────────────────────────────────────────────────
axum         = "0.8"
hyper        = { version = "1", features = ["http1", "server"] }
hyper-util   = { version = "0.1", features = ["tokio"] }
tower        = { version = "0.5", features = ["util"] }
tower-http   = { version = "0.6", features = ["cors"] }

# ── TLS ───────────────────────────────────────────────────────────────────────
# Disable default-features so only ring is used — avoids the two-provider panic.
tokio-rustls  = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls        = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen         = "0.14"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
