[package]
name = "fleetshell-client"
version = "0.1.0"
description = "FleetShell desktop client"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"

# ── Async web server ────────────────────────────────────────────────────────
axum          = { version = "0.8", features = ["json", "macros"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.6", features = ["cors"] }

# ── TLS for gateway connections ─────────────────────────────────────────────
tokio-rustls  = "0.26"
rustls        = { version = "0.23", features = ["ring"] }
webpki-roots  = "1.0"
