[package]
name = "fleetshell-client"
version = "0.4.0"
description = "FleetShell desktop client"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log       = "2"
tauri-plugin-deep-link = "2"

# ── Async web server ────────────────────────────────────────────────────────
axum          = { version = "0.8", features = ["json", "macros"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.6", features = ["cors"] }

# ── Config persistence
toml          = "0.8"

# ── HTTP client (enrollment portal)
# default-features = false avoids bundling a second TLS provider alongside
# the tokio-rustls already in scope.
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking"] }
base64        = "0.22"
url           = "2"

# ── TLS for the inbound HTTPS API server ────────────────────────────────────
# Parses PEM cert/key files stored by the enrollment flow.
rustls-pemfile = "2"
# hyper + hyper-util are needed to serve Axum over a raw TlsAcceptor.
# Both are transitive deps already; making them direct keeps feature flags
# explicit and avoids relying on whatever features another crate enables.
hyper          = { version = "1",   features = ["http1"] }
hyper-util     = { version = "0.1", features = ["tokio", "server-auto"] }
# tower::ServiceExt::oneshot is used in the TLS serve loop.
tower          = { version = "0.5", features = ["util"] }

# ── TLS for gateway connections ─────────────────────────────────────────────
# Both tokio-rustls and rustls default to aws_lc_rs; adding ring on top
# gives two providers → runtime panic.  Opt out of defaults, pick ring only.
tokio-rustls  = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls        = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
# System trust store so enterprise CAs (e.g. zScaler) are automatically trusted.
# webpki-roots (Mozilla static bundle) is intentionally NOT used here.
rustls-native-certs = "0.8"
